Advance-Concepts/vagrant/manifests/init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-init
  labels:
    app: pod-init
spec:
  containers:
    - name: cont-main
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - name: data
          mountPath: /usr/share/nginx/html
  volumes:
    - name: data
      emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: svc-init
  labels:
    app: svc-init
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30005
      protocol: TCP
  selector:
    app: pod-init
