Advance-Concepts/vagrant/manifests/contour-fanout-complete.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels:
    app: pod1
spec:
  containers:
    - image: shekeriev/k8s-environ
      name: main
---
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: pod1
---
apiVersion: v1
kind: Pod
metadata:
  name: pod2
  labels:
    app: pod2
spec:
  containers:
    - image: shekeriev/k8s-environ
      name: main
---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: pod2
---
apiVersion: v1
kind: Pod
metadata:
  name: podd
  labels:
    app: podd
spec:
  containers:
    - image: shekeriev/k8s-environ
      name: main
---
apiVersion: v1
kind: Service
metadata:
  name: serviced
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: podd
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: fanout-proxy
  namespace: default
spec:
  virtualhost:
    fqdn: demo.lab
    tls:
      secretName: demo-tls-secret

  routes:
    - conditions:
        - prefix: /service1
      services:
        - name: service1
          port: 80
      pathRewritePolicy:
        replacePrefix:
          - replacement: /
    - conditions:
        - prefix: /service2
      services:
        - name: service2
          port: 80
      pathRewritePolicy:
        replacePrefix:
          - replacement: /
    - services:
        - name: serviced
          port: 80
