Advance-Concepts/vagrant/manifests/fanout-with-tls.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels:
    app: pod1
spec:
  containers:
    - image: shekeriev/k8s-environ
      name: main
---
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: pod1
---
apiVersion: v1
kind: Pod
metadata:
  name: pod2
  labels:
    app: pod2
spec:
  containers:
    - image: shekeriev/k8s-environ
      name: main
---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: pod2
---
apiVersion: v1
kind: Pod
metadata:
  name: podd
  labels:
    app: podd
spec:
  containers:
    - image: shekeriev/k8s-environ
      name: main
---
apiVersion: v1
kind: Service
metadata:
  name: serviced
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: podd
---
# Ingress with TLS Configuration
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ctrl
  annotations:
    nginx.org/rewrites: "serviceName=service1 rewrite=/;serviceName=service2 rewrite=/"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - demo.lab
      secretName: demo-tls-secret
  defaultBackend:
    service:
      name: serviced
      port:
        number: 80
  rules:
    - host: demo.lab
      http:
        paths:
          - path: /service1
            pathType: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 80
          - path: /service2
            pathType: Prefix
            backend:
              service:
                name: service2
                port:
                  number: 80
